load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("//js:ts.bzl", "ts_library")
load("//js:ts_test.bzl", "ts_test")

ts_library(
    name = "tools_utils",
    srcs = [
        "utils.ts",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//:node_modules/@types/js-yaml",
        "//:node_modules/@types/node",
        "//:node_modules/js-yaml",
    ],
)

ts_test(
    name = "replace_ellipsis_tests",
    entry_point = "replace_ellipsis.test.ts",
    deps = [
        ":replace_ellipsis",
        "//:node_modules/@types/node",
    ],
)

ts_library(
    name = "diff_parser",
    srcs = ["diff_parser.ts"],
    visibility = ["//js/localization_tools/diff_parser:__pkg__"],
    deps = [
        ":tools_utils",
        "//:node_modules/@types/node",
        "//:node_modules/xmlbuilder2",
    ],
)

ts_test(
    name = "diff_parser_tests",
    data = [
        "test_fixtures/fake_diff.txt",
        "test_fixtures/fake_strings.xml",
    ],
    entry_point = "diff_parser.test.ts",
    deps = [
        ":diff_parser",
        "//:node_modules/@types/mock-fs",
        "//:node_modules/@types/node",
        "//:node_modules/mock-fs",
    ],
)

ts_test(
    name = "tools_utils_tests",
    entry_point = "utils.test.ts",
    deps = [
        ":tools_utils",
        "//:node_modules/@types/node",
    ],
)

ts_library(
    name = "delete_localization_files",
    srcs = [
        "deleter.ts",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":tools_utils",
        "//:node_modules/@types/node",
    ],
)

ts_library(
    name = "generate_locales",
    srcs = [
        "locales_generator.ts",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":tools_utils",
        "//:node_modules/@types/node",
    ],
)

ts_library(
    name = "replace_ellipsis",
    srcs = [
        "replace_ellipsis.ts",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":tools_utils",
        "//:node_modules/@types/node",
    ],
)

ts_library(
    name = "cli",
    srcs = ["index.ts"],
    visibility = ["//visibility:private"],
    deps = [
        ":delete_localization_files",
        ":diff_parser",
        ":generate_locales",
        ":replace_ellipsis",
        "//:node_modules/@types/node",
        "//:node_modules/commander",
    ],
)

js_binary(
    name = "localization_tools",
    data = [":cli"],
    entry_point = "index.js",
)

ts_test(
    name = "generate_locales_tests",
    entry_point = "locales_generator.test.ts",
    deps = [":generate_locales"],
)

ts_test(
    name = "delete_localization_files_tests",
    entry_point = "deleter.test.ts",
    deps = [
        ":delete_localization_files",
        "//:node_modules/@types/js-yaml",
        "//:node_modules/js-yaml",
    ],
)
