load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("//js:ts.bzl", "ts_library")

ts_library(
    name = "update_aosp_dictionaries_lib",
    srcs = [
        "differ.ts",
        "index.ts",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//:node_modules/@actions/core",
        "//:node_modules/@types/follow-redirects",
        "//:node_modules/@types/js-yaml",
        "//:node_modules/@types/node",
        "//:node_modules/commander",
        "//:node_modules/tar",
    ],
)

js_binary(
    name = "update_aosp_dictionaries",
    data = [":update_aosp_dictionaries_lib"],
    entry_point = "dist/index.js",
)
